fixing Header z-index

--- a/src/App/CommonComponents/Header/Header.css
+++ b/src/App/CommonComponents/Header/Header.css
@@ -4,7 +4,8 @@
   right: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.7);
-  padding: 0
+  padding: 0;
+  z-index: 1;
 }
 
 .navbar {
